<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="category_haircut">category_haircut</string>
    <string name="title_explore">Explore</string>
    <string name="subhead_nextcutter">Nextcuter of the month</string>
    <string name="header_nextcutter">Best Nexcuters</string>
    <string name="home">Home</string>
    <string name="cart">cart</string>
    <string name="test_description">Un barbier est une personne, dont le métier consiste à entretenir les cheveux et/ou
        la pilosité faciale des hommes. Son métier est proche de celui d\'un coiffeur, en plus spécialisé. Il doit
        savoir raser de près et à blanc. Le barbier est un statut qui a disparu en 1989 ainsi que le titre de Maître
        Barbier.
    </string>
    <string name="nextcut_db">nextcut.db</string>
    <string name="password">password</string>
    <string name="full_name">Full name</string>
    <string name="nextcuter">Nextcuter</string>
    <string name="false_email">nextcut.contact@gmail.com</string>
    <string name="email">email</string>
    <string name="sign_up">Sign Up</string>
    <string name="nextcut_logo">nextcut_logo</string>
    <string name="brand_subtitle">Get your fresh cut whenever you want wherever you want</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_email_address">Register with email address</string>
    <string name="login_here"><u>Login here.</u></string>
    <string name="welcome_back">Welcome back.</string>
    <string name="already_registered">Already registered ?</string>
    <string name="not_yet_registered">Not yet registered ?</string>
    <string name="register_here"><u>Register here.</u></string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_email_address">Login with email address</string>
    <string name="facebook_app_id">317414835853845</string>
    <string name="fb_login_protocol_scheme">fb317414835853845</string>
    <string name="default_client_id">64410353141-qv4rvijjbgl4bsnsdq76e69v9ua321eb.apps.googleusercontent.com</string>
    <string name="retry">Retry</string>
    <string name="haircuts_fetch_error">An error occurred while loading the haircuts</string>
    <string name="profile">profile</string>
    <string name="select_a_category">Select a category</string>
    <string name="see_all">See all</string>
</resources>
