<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_fav"
            android:enabled="true"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorite"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_cart"
            android:enabled="true"
            android:title="@string/cart"
            android:icon="@drawable/ic_cart"
            app:showAsAction="ifRoom"/>
</menu>