<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/activity_main"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorWhiteDark"
                                             android:clipToPadding="false"
                                             tools:context=".ui.MainActivity">


    <ImageView
            android:background="@drawable/background_gradient"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            android:id="@+id/imvBackgroundLogo"/>

    <LinearLayout
            android:id="@+id/ctnInput"
            android:background="@drawable/background_white"
            android:padding="@dimen/padding_login_container"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:elevation="@dimen/small_elevation"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/imvBackgroundLogo"
            app:layout_constraintBottom_toBottomOf="@id/imvBackgroundLogo">

        <TextView
                android:text="@string/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:drawablePadding="20dp"
                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/nextcuter"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:drawablePadding="20dp"
                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/false_email"
                android:layout_width="match_parent"
                style="@style/TextViewContentLogin"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:drawablePadding="20dp"
                android:drawableEnd="@drawable/ic_password"
                android:inputType="textPassword"
                android:hint="******"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:textColor="@color/colorWhite"
                android:background="@drawable/background_fb"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:background="@drawable/background"
                android:textAllCaps="false"
                android:text="Sign Up with FACEBOOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/imvLogo"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/nextcut_logo"
            android:background="@drawable/background_white"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ctnInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:text="@string/sign_up"
            style="@style/TextViewSubTitleWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            app:layout_constraintTop_toBottomOf="@id/imvLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView"/>

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineRight"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.92"/>

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineLeft"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.08"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.55"/>


</android.support.constraint.ConstraintLayout>