<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:id="@+id/activity_main"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimary"
                                                   android:clipToPadding="false"
                                                   tools:context=".ui.MainActivity">


    <TextView
            android:id="@+id/txvBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TextViewBrandTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop"/>


    <TextView
            android:id="@+id/txvSubTitleBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txvBrand"
            android:minLines="2"
            app:layout_constraintEnd_toEndOf="@+id/txvBrand"
            app:layout_constraintStart_toStartOf="@+id/txvBrand"
            style="@style/TextViewTitle"
            android:text="@string/brand_subtitle"/>


    <Button
            android:id="@+id/btnGoogleRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_with_google"
            style="@style/ButtonsConnexion"
            android:drawableStart="@drawable/ic_google"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            android:layout_marginStart="@dimen/btn_connexion_margin_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            android:layout_marginEnd="@dimen/btn_connexion_margin_horizontal"
            android:layout_marginTop="@dimen/btn_connexion_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/txvSubTitleBrand"/>

    <include
            android:id="@+id/includeBtnFacebookRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            layout="@layout/button_facebook"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            android:layout_marginStart="@dimen/btn_connexion_margin_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            android:layout_marginEnd="@dimen/btn_connexion_margin_horizontal"
            android:layout_marginTop="@dimen/btn_connexion_margin_top_secondary"
            app:layout_constraintTop_toBottomOf="@id/btnGoogleRegister"/>

    <Button
            android:id="@+id/btnMailRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_with_email_address"
            style="@style/ButtonsConnexion"
            android:drawableStart="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            android:layout_marginStart="@dimen/btn_connexion_margin_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            android:layout_marginEnd="@dimen/btn_connexion_margin_horizontal"
            android:layout_marginTop="@dimen/btn_connexion_margin_top_secondary"
            app:layout_constraintTop_toBottomOf="@id/includeBtnFacebookRegister"/>

    <TextView
            android:id="@+id/txvLoginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_connexion_margin_top_secondary"
            app:layout_constraintTop_toBottomOf="@id/btnMailRegister"
            app:layout_constraintStart_toStartOf="@+id/btnMailRegister"
            style="@style/TextViewContentWhite"
            android:text="@string/already_registered"/>

    <TextView
            android:id="@+id/txvLoginLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_connexion_margin_top_secondary"
            app:layout_constraintTop_toBottomOf="@id/btnMailRegister"
            app:layout_constraintStart_toEndOf="@id/txvLoginLabel"
            style="@style/TextViewContentWhite"
            android:gravity="start"
            android:layout_marginStart="@dimen/btn_connexion_margin_horizontal"
            android:text="@string/login_here" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"/>


    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guidelineTop"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guidelineStart"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guidelineEnd"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.85"/>


</androidx.constraintlayout.widget.ConstraintLayout>